--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 REACT_APP_NAME=Qhatu
+REACT_APP_API_URL=http://localhost:8090/api/
+REACT_APP_PATH_AUTH=gtw-auth/oauth/token
+REACT_APP_USERNAME_CLIENT=WEB-APP
+REACT_APP_PASSWORD_CLIENT=$c0t14b4nk2022
+REACT_APP_GRANT_TYPE_CLIENT=password
