--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-loading-skeleton": "^3.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "redux": "^4.1.2"
   },
   "scripts": {
     "start": "set PORT=3027 && react-scripts start",
