--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_API_PATH_SIGNUP=/gtw-usr/users/signUp
 REACT_APP_USERNAME_CLIENT_API=WEB-APP
 REACT_APP_PASSWORD_CLIENT_API=\$c0t14b4nk2022
 REACT_APP_GRANT_TYPE_CLIENT_API=password
+REACT_APP_API_RICK_AND_MORTY=https://rickandmortyapi.com/api/character
