--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
 REACT_APP_NAME=Qhatu
-REACT_APP_API_URL=http://localhost:8090/api
-REACT_APP_API_PATH_SIGNIN=/gtw-auth/oauth/token
-REACT_APP_API_PATH_SIGNUP=/gtw-usr/users/signUp
-REACT_APP_USERNAME_CLIENT_API=WEB-APP
-REACT_APP_PASSWORD_CLIENT_API=\$c0t14b4nk2022
-REACT_APP_GRANT_TYPE_CLIENT_API=password
+REACT_APP_QHATU_API_URL=http://localhost:8090/api
+REACT_APP_QHATU_API_PATH_SIGNIN=/gtw-auth/oauth/token
+REACT_APP_QHATU_API_PATH_SIGNUP=/gtw-usr/users/signUp
+REACT_APP_QHATU_API_PATH_PRODUCTS=/gtw-prd/products
+REACT_APP_QHATU_API_PATH_PRODUCTS_GETALL=/getAll
+REACT_APP_QHATU_API_PATH_PURCHASE=/gtw-prc/puchases
+REACT_APP_QHATU_API_USERNAME_CLIENT=WEB-APP
+REACT_APP_QHATU_API_PASSWORD_CLIENT=\$c0t14b4nk2022
+REACT_APP_QHATU_API_GRANT_TYPE_CLIENT=password
 REACT_APP_API_RICK_AND_MORTY=https://rickandmortyapi.com/api/character
