Registro de Usuario

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ REACT_APP_NAME=Qhatu
 REACT_APP_QHATU_API_URL=http://localhost:8090/api
 REACT_APP_QHATU_API_PATH_SIGNIN=/gtw-auth/oauth/token
 REACT_APP_QHATU_API_PATH_SIGNUP=/gtw-usr/users/signUp
+REACT_APP_QHATU_API_PATH_USER_EXISTS=/gtw-usr/users/signIn
 REACT_APP_QHATU_API_PATH_PRODUCTS=/gtw-prd/products
 REACT_APP_QHATU_API_PATH_PRODUCTS_GETALL=/getAll
 REACT_APP_QHATU_API_PATH_PURCHASE=/gtw-prc/puchases
