--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 REACT_APP_NAME=Qhatu
 REACT_APP_QHATU_API_URL=http://localhost:8090/api
 REACT_APP_QHATU_API_PATH_SIGNIN=/gtw-auth/oauth/token
+REACT_APP_QHATU_API_PATH_REFRESH_TOKEN=/gtw-auth/oauth/refreshtoken
 REACT_APP_QHATU_API_PATH_SIGNUP=/gtw-usr/users/signUp
 REACT_APP_QHATU_API_PATH_USER_EXISTS=/gtw-usr/users/signIn
 REACT_APP_QHATU_API_PATH_PRODUCTS=/gtw-prd/products
 REACT_APP_QHATU_API_PATH_PRODUCTS_GETALL=/getAll
+REACT_APP_QHATU_API_PATH_PRODUCTS_GETBYID=/getById
+REACT_APP_QHATU_API_PATH_PRODUCTS_VALIDATESTOCK=/validateStock
 REACT_APP_QHATU_API_PATH_PURCHASE=/gtw-prc/puchases
 REACT_APP_QHATU_API_USERNAME_CLIENT=WEB-APP
 REACT_APP_QHATU_API_PASSWORD_CLIENT=\$c0t14b4nk2022
