Filtro de Categorias con Filtro por nombre de producto

--- a/.env
+++ b/.env
@@ -17,3 +17,6 @@ REACT_APP_QHATU_API_USERNAME_CLIENT=WEB-APP
 REACT_APP_QHATU_API_PASSWORD_CLIENT=\$c0t14b4nk2022
 REACT_APP_QHATU_API_GRANT_TYPE_CLIENT=password
 REACT_APP_API_RICK_AND_MORTY=https://rickandmortyapi.com/api/character
+#CM Punto 1 Filtro por categorias
+REACT_APP_QHATU_NESTJS_API_URL=http://localhost:3000
+REACT_APP_QHATU_NESTJS_API_PATH_CATEGORIES=/category
